Created using Google Colaboratory

--- a/template.ipynb
+++ b/template.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNC0sf/lu07Ohy18sswatmw",
+      "authorship_tag": "ABX9TyMCXP1DCbrGn3H8t1ELETmI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8UZ4THOZBbsk",
-        "outputId": "ffd29bf6-345f-4229-8fa8-eabcd33fa0e7"
+        "outputId": "4254ee37-ae6b-4982-d786-7a6873826f1f"
       },
       "outputs": [
         {
@@ -47,6 +47,29 @@
       ],
       "source": [
         "print(\"Hello World!\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Hello Colab\")"
+      ],
+      "metadata": {
+        "id": "Cm_NaWvNGbqD",
+        "outputId": "9c18cf3a-829f-4843-e94c-a291875bfe4d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello Colab\n"
+          ]
+        }
       ]
     }
   ]
